site/web/app/themes/brandonrp/assets/styles/pages/_resume.scss
.contact-card {
  text-align: center;
  
  max-width: $post-width;
  width: 100%;
  margin: ms(2) 0;
}

.contact-wrapper {
  @include container(12 fluid);

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  gap: ms(2);

  margin-left: auto;
  margin-right: auto;

  @media(max-width: $screen-sm) {
    flex-direction: column;
    text-align: center;

    > div {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
  }
}

.contact-info-wrapper {
  display: inline-flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: left;
  text-align: left;

  @media(max-width: $screen-sm) {
    text-align: center;
  }
}

.contact-photo {
  flex: 0 0 auto;
  width: rem(220);
  max-width: rem(220);
  aspect-ratio: 1;
  border-radius: 50%;
  overflow: hidden;
  border: 7px solid $brand-gray-lighter;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
  }

  @media (max-width: $screen-sm) {
    margin-bottom: ms(2);
  }
}

.contact-info-group {
  display: block;
  white-space: nowrap;
}

.contact-label {
  @extend .brackets;
  @extend h4;
}

.contact-info {
  font-family: $font-family-body;
  font-weight: 200;
  text-transform: none;
  margin-bottom: 0;

  &.name {
    @extend h3;
  }

  @media (max-width: $screen-sm) {
    &.name {
      font-size: ms(2);
      margin: 0;
    }
  }
}

.contact-info,
.inline-block {
  display: inline-block;
}

.resume { 
  .brackets {
    white-space: nowrap;
  }

  .page-header, 
  .entry-title {
    font-size: ms(3);
    padding: 0;
    margin: ms(2) auto;
  }
}

